--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 
 
 *{
+  /* width: 100%; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -45,7 +46,7 @@
 body{
   line-height: 1.8em;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 26px;
 }
 
 a {
@@ -276,4 +277,15 @@ a {
     height: 50vh;
   }
   
+}
+
+
+/* Home Page */
+
+.home{
+  /* font-size: small; */
+  text-align: center;
+  margin-top: 20px;
+  font-size: 30px;
+  color: var(--color-main);
 }
